fix: name and author

--- a/src/font-smoothing.user.css
+++ b/src/font-smoothing.user.css
@@ -1,6 +1,7 @@
 /* ==UserStyle==
 @name           Font Smoothing
-@namespace      Font Smoothing 
+@namespace      metorih
+@author         metorih
 @version        1.0.0
 @description    Font Smoothing antialiased auto
 ==/UserStyle== */
