--- a/src/font-smoothing.user.css
+++ b/src/font-smoothing.user.css
@@ -2,11 +2,17 @@
 @name           Font Smoothing
 @namespace      metorih
 @author         metorih
-@version        1.0.0
+@version        1.0.1
 @description    Font Smoothing antialiased auto
 ==/UserStyle== */
-@-moz-document url-prefix("https://") {
+@-moz-document url-prefix("http") {
     body {
         -webkit-font-smoothing: auto !important;
+    }
+}
+
+@-moz-document domain('youtube.com') {
+    body {
+        -webkit-font-smoothing: antialiased !important;
     }
 }
